--- a/src/styles/_Theme.scss
+++ b/src/styles/_Theme.scss
@@ -31,8 +31,8 @@
 $header-height: 54px;
 
 // APP COLORS
-$primary-color: #213353;
-$secondary-color: #e67235;
+$primary-color: #114195;
+$secondary-color: #00A7E8;
 $error-color: #e04f4f;
 $warning-color: #F8E164;
 $info-color: #9DC4ED;
