--- a/src/styles/components/_Layout.scss
+++ b/src/styles/components/_Layout.scss
@@ -1,17 +1,14 @@
 .header {
-    height: 70px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 
+    height: 70px;
     padding: 10px 30px;
 
     box-shadow: shadows(2);
-
     background-color: white;
-
-
 
     .logo {
         flex-grow: 1;
@@ -27,6 +24,7 @@
             font-weight: 500;
             margin-right: 20px;
             padding: 5px 10px;
+            text-transform: uppercase;
         }
 
         .active {
