--- a/src/styles/components/_Modal.scss
+++ b/src/styles/components/_Modal.scss
@@ -47,6 +47,11 @@
             }
         }
 
+        .switch {
+            margin: 0px !important;
+            
+        }
+
         .MuiStepper-root {
             max-width: breakpoints(sm);
             padding-top: 15px;
