--- a/src/styles/pages/_Dashboard.scss
+++ b/src/styles/pages/_Dashboard.scss
@@ -113,3 +113,11 @@
 
     }
 }
+
+
+.clickable-table-row {
+    cursor: pointer;
+    &:hover {
+        background-color: rgb(243, 243, 243);
+    }
+}
