--- a/src/styles/components/_Modal.scss
+++ b/src/styles/components/_Modal.scss
@@ -2,17 +2,25 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 
-    &.lg form {
-        max-width: breakpoints(lg);
+    &>div {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
     }
 
     form {
         max-height: 100%;
         max-width: breakpoints(sm);
         width: 100%;
-        padding: 10px;
-        margin: 10px;
+    }
+
+    &.lg form {
+        max-width: breakpoints(lg);
     }
 
     .MuiCard-root {
@@ -21,7 +29,7 @@
 
     .MuiCardContent-root {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         flex-direction: column;
         max-height: calc(100vh - 200px);
         overflow-y: auto;
@@ -49,7 +57,7 @@
 
         .switch {
             margin: 0px !important;
-            
+
         }
 
         .MuiStepper-root {
