Added foundational login page

--- a/src/styles/Index.scss
+++ b/src/styles/Index.scss
@@ -5,6 +5,7 @@
 @import './Theme.scss';
 
 @import './pages/Dashboard.scss';
+@import './pages/Authentication.scss';
 
 @import './components/Layout.scss';
 @import './components/Modal.scss';
