--- a/src/styles/components/_Assessment.scss
+++ b/src/styles/components/_Assessment.scss
@@ -48,8 +48,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding: 10px;
-        margin-bottom: 16px;
+        margin: 10px 0px 20px;
 
         >.MuiTypography-root {
             font-size: 1rem;
