--- a/src/styles/pages/_Authentication.scss
+++ b/src/styles/pages/_Authentication.scss
@@ -17,6 +17,13 @@
         text-align: center;
     }
 
+    .logo {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        padding-right: 30px;
+    }
+
     form {
         display: flex;
         flex-direction: column;
