Added error when no questions are selected in an assessment

--- a/src/styles/components/_Modal.scss
+++ b/src/styles/components/_Modal.scss
@@ -97,4 +97,14 @@
         justify-content: space-between;
         padding-top: 15px;
     }
+
+    .error-text {
+        font-family: 'Roboto' !important;
+        font-size: 0.8rem;
+        font-style: italic;
+        text-align: center;
+        color: palette(error, main);
+        width: 100%;
+        padding: 10px 0px 20px;
+    }
 }
