--- a/src/styles/components/_Layout.scss
+++ b/src/styles/components/_Layout.scss
@@ -18,6 +18,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        text-align: center;
 
         .MuiTypography-root {
             font-size: 1rem;
