--- a/src/styles/Index.scss
+++ b/src/styles/Index.scss
@@ -10,6 +10,7 @@
 @import './components/Layout.scss';
 @import './components/Modal.scss';
 @import './components/Assessment.scss';
+@import './components/Changelog.scss';
 
 html,
 body {
