--- a/src/styles/components/_Modal.scss
+++ b/src/styles/components/_Modal.scss
@@ -10,17 +10,16 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 10px;
+        padding: 20px;
     }
 
     form {
         max-height: 100%;
-        max-width: breakpoints(sm);
-        width: 100%;
+        width: breakpoints(sm);
     }
 
     &.lg form {
-        max-width: breakpoints(lg);
+        width: breakpoints(md);
     }
 
     .MuiCard-root {
