Refactored tables into common component

--- a/src/styles/Index.scss
+++ b/src/styles/Index.scss
@@ -11,6 +11,7 @@
 @import './components/Modal.scss';
 @import './components/Assessment.scss';
 @import './components/Changelog.scss';
+@import './components/Table.scss';
 
 html,
 body {
