Styling changes to adapt to new mockups

--- a/src/styles/_Theme.scss
+++ b/src/styles/_Theme.scss
@@ -41,7 +41,7 @@ $success-color: #72CE7C;
 $theme: (
     custom: (
         header_height: $header-height,
-        typography_fontFamily: ("Overpass", sans-serif)
+        typography_fontFamily: ("Plus Jakarta Sans", sans-serif)
     ),
     breakpoints: (
         xs: 0px,
