--- a/src/styles/components/_Layout.scss
+++ b/src/styles/components/_Layout.scss
@@ -23,6 +23,7 @@
         .MuiTypography-root {
             font-size: 1rem;
             font-weight: 500;
+            font-family: 'Plus Jakarta Sans';
             margin-right: 20px;
             padding: 10px 0px;
             // text-transform: uppercase;
