--- a/src/styles/components/_Table.scss
+++ b/src/styles/components/_Table.scss
@@ -1,20 +1,43 @@
 .browse-table {
+    box-shadow: 0px 0px 0px 1px #ADADAD;
+
     .MuiTableHead-root {
         background-color: #515151;
 
         .MuiTableCell-root {
             color: white;
-            font-weight: 500;
+            font-family: 'Plus Jakarta Sans';
+            font-weight: 600;
             text-transform: uppercase;
+            box-shadow: 0px 0px 0px 0.5px #393939;
         }
     }
 
     .MuiTableBody-root {
-        .MuiTableCell-root {
-            border: 0.5px solid #ADADAD;
+        // border: 0.5px solid #ADADAD;
+
+        td {
+            // outline: 0.5px solid #ADADAD;
+            box-shadow: 0px 0px 0px 0.5px #ADADAD;
+            border: none;
+            outline: none;
 
             &.null {
                 background-color: #F2F2F2;
+            }
+        }
+
+        .MuiTableRow-root:last-child {
+            td {}
+        }
+
+        .MuiTableRow-root:last-child {
+            td:first-child {
+                border-bottom-left-radius: shape(borderRadius);
+            }
+
+            td:last-child {
+                border-bottom-right-radius: shape(borderRadius);
             }
         }
     }
