--- a/src/styles/components/_Table.scss
+++ b/src/styles/components/_Table.scss
@@ -76,6 +76,17 @@
                 }
             }
         }
+    }
 
+    .clickable-table-row {
+        cursor: pointer;
+
+        &:hover {
+            background-color: rgb(243, 243, 243) !important;
+
+            td {
+                background-color: rgb(243, 243, 243) !important;
+            }
+        }
     }
 }
