--- a/src/styles/components/_Changelog.scss
+++ b/src/styles/components/_Changelog.scss
@@ -5,10 +5,12 @@
 
     .MuiTableContainer-root {
         max-height: 400px;
+        border-radius: 0px;
 
         .MuiTableHead-root {
             .MuiTableCell-root {
-                background-color: white;
+                background-color: palette(greyscale, 300);
+                color: palette(primary, main);
             }
         }
     }
