--- a/src/styles/components/_Assessment.scss
+++ b/src/styles/components/_Assessment.scss
@@ -140,6 +140,10 @@
             display: flex;
             flex-direction: row;
             align-items: center;
+
+            .MuiTextField-root {
+                width: 100%;
+            }
         }
     }
 
