--- a/src/styles/components/_Table.scss
+++ b/src/styles/components/_Table.scss
@@ -90,3 +90,54 @@
         }
     }
 }
+
+.status-chip {
+    text-align: center;
+    font-weight: 600;
+    font-family: 'Plus Jakarta Sans';
+
+    span {
+        padding: 4px 15px;
+        border-radius: 3px;
+        width: min-content;
+        background-color: #c5c5c5;
+        color: #414141;
+        border: 1px solid #ababab;
+    }
+
+    &.created span {
+        background-color: #ffdcb3;
+        color: #7a511c;
+        border: 1px solid #cbab87;
+    }
+
+    &.ongoing span {
+        background-color: #CDEAB6;
+        color: #416522;
+        border: 1px solid #a6c38f;
+    }
+
+    &.assessor-review span {
+        background-color: #B4E9E0;
+        color: #386860;
+        border: 1px solid #8fc7be;
+    }
+
+    &.oversight span {
+        background-color: #c8e2ff;
+        color: #345376;
+        border: 1px solid #a0bad7;
+    }
+
+    &.client-review span {
+        background-color: #C0AEF5;
+        color: #53467c;
+        border: 1px solid #9f8dd3;
+    }
+
+    &.completed span {
+        background-color: #facbd6;
+        color: #7e4351;
+        border: 1px solid #d2a8b2;
+    }
+}
