--- a/src/styles/pages/_Dashboard.scss
+++ b/src/styles/pages/_Dashboard.scss
@@ -27,6 +27,7 @@
 
                 .label {
                     border-radius: shape(borderRadius) 0px 0px shape(borderRadius);
+                    color: black;
                 }
 
                 .count {
@@ -102,28 +103,6 @@
         }
     }
 
-    .filter {
-        padding: 0px 15px;
-
-        .label {
-            cursor: pointer;
-
-            &.active {
-                text-decoration: underline;
-                color: palette(primary, main);
-                font-weight: 600;
-            }
-        }
-
-        .count {
-            border-radius: 3px !important;
-            background-color: palette(greyscale, 400) !important;
-            font-size: 0.875rem;
-            font-weight: 600;
-            padding: 2px 7px !important;
-            margin-left: 7px !important;
-        }
-    }
 
     .MuiTab-root {
         max-width: 400px;
@@ -133,5 +112,29 @@
         .MuiBox-root {
             padding: 0px;
         }
+    }
+}
+
+
+.filter {
+    padding: 0px 15px;
+
+    .label {
+        cursor: pointer;
+
+        &.active {
+            text-decoration: underline;
+            color: palette(primary, main);
+            font-weight: 600;
+        }
+    }
+
+    .count {
+        border-radius: 3px !important;
+        background-color: palette(greyscale, 400) !important;
+        font-size: 0.875rem;
+        font-weight: 600;
+        padding: 2px 7px !important;
+        margin-left: 7px !important;
     }
 }
