--- a/src/styles/pages/_Dashboard.scss
+++ b/src/styles/pages/_Dashboard.scss
@@ -1,14 +1,31 @@
 .dashboard {
-    margin: 10px 30px 40px;
+    margin: 30px;
 
     // =========== OTHER ===========
 
 
-    .assessments-actions {
+    .browse-add {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        width: 100%;
+        padding: 0px 0px 15px;
+
+        .MuiButton-root:last-child {
+            margin-left: 10px;
+        }
+    }
+
+    .browse-actions {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        padding: 15px 0px;
+        padding: 0px 0px 15px;
+
+        .browse-add {
+            width: auto;
+            padding: 0px;
+        }
 
         .assessments-filters {
             display: flex;
@@ -87,54 +104,5 @@
                 }
             }
         }
-    }
-
-    .browse-add {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-
-        .MuiButton-root {
-            height: min-content;
-        }
-
-        .MuiButton-root:last-child {
-            margin-left: 10px;
-        }
-    }
-
-
-    .MuiTab-root {
-        max-width: 400px;
-    }
-
-    .tab-panel {
-        .MuiBox-root {
-            padding: 0px;
-        }
-    }
-}
-
-
-.filter {
-    padding: 0px 15px;
-
-    .label {
-        cursor: pointer;
-
-        &.active {
-            text-decoration: underline;
-            color: palette(primary, main);
-            font-weight: 600;
-        }
-    }
-
-    .count {
-        border-radius: 3px !important;
-        background-color: palette(greyscale, 400) !important;
-        font-size: 0.875rem;
-        font-weight: 600;
-        padding: 2px 7px !important;
-        margin-left: 7px !important;
     }
 }
