--- a/src/styles/components/_Table.scss
+++ b/src/styles/components/_Table.scss
@@ -25,9 +25,15 @@
         td {
             box-shadow: 0px 0px 0px 0.5px #ADADAD;
             border: none !important;
+            height: 45px !important;
 
             &.null {
                 background-color: #f9f9f9;
+            }
+
+            button {
+                padding: 10px;
+                margin: -10px;
             }
         }
 
