--- a/src/styles/components/_Assessment.scss
+++ b/src/styles/components/_Assessment.scss
@@ -10,7 +10,7 @@
     }
 
     .assessment-content {
-        height: calc(100vh - 71px);
+        height: calc(100vh - 51px);
         overflow-y: auto;
         display: flex;
         flex-direction: column;
@@ -63,74 +63,26 @@
         }
     }
 
-    .filters {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin: 10px 0px 20px;
-        width: 100%;
-        padding: 20px 10px;
-        border-top: 1px solid palette(greyscale, 300);
-        border-bottom: 1px solid palette(greyscale, 300);
-
-        >.MuiTypography-root {
-            font-size: 1rem;
-            font-weight: 500;
-            padding-right: 10px;
-        }
-
-        .MuiInputBase-root {
-            margin-right: 15px;
-        }
-    }
-
     .question-content {
-        >.MuiTypography-root {
-            font-size: 1rem;
-            font-weight: 500;
-            padding-bottom: 5px;
-        }
-
-        .MuiTextField-root {
-            width: 100%;
-            padding-bottom: 10px;
-        }
-
-    }
-
-    .save {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .rating {
-        display: flex;
-        flex-direction: column;
-
-        .rating-input {
+        .filters {
             display: flex;
             flex-direction: row;
             align-items: center;
-        }
+            width: 100%;
+            padding: 20px 10px;
+            border: 1px solid palette(greyscale, 300);
 
-        .MuiTypography-root:first-child {
-            font-size: 1rem;
-            font-weight: 500;
-            padding-right: 5px;
-        }
+            >.MuiTypography-root {
+                font-size: 1rem;
+                font-weight: 500;
+                padding-right: 10px;
+            }
 
-        .MuiSvgIcon-root>*:first-of-type {
-            color: palette(greyscale, 500);
-            cursor: pointer;
-        }
-
-        .MuiFormControl-root {
-            margin-left: 10px;
+            .MuiInputBase-root {
+                margin-right: 15px;
+            }
         }
     }
-
 
     .reference {
         display: flex;
@@ -147,29 +99,100 @@
         }
     }
 
-    .actions {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-
-        &.simple {
-            justify-content: flex-end;
-            margin-top: 16px;
-        }
-
-        .MuiButton-root {
-            margin: 10px;
-        }
-    }
-
     .widget-header {
         display: flex;
         padding: 10px;
+        border: 1px solid palette(greyscale, 700);
         background-color: palette(greyscale, 600);
         color: white;
         font-weight: 600;
         font-size: 1.1rem;
         font-family: 'Plus Jakarta Sans';
+    }
+
+    .widget-sub-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 10px;
+        border: 1px solid palette(greyscale, 400);
+        background-color: palette(greyscale, 300);
+        color: palette(primary, dark);
+        font-weight: 600;
+        font-size: 1.1rem;
+        font-family: 'Plus Jakarta Sans';
+
+        .rating-input {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+
+            .MuiTypography-root:first-child {
+                font-size: 1.1rem;
+                font-weight: 500;
+                padding-right: 5px;
+            }
+
+            .MuiFormControl-root {
+                margin-left: 5px;
+            }
+        }
+    }
+
+    .widget-body {
+        border-left: 1px solid palette(greyscale, 300);
+        border-right: 1px solid palette(greyscale, 300);
+        padding: 10px;
+
+        &.widget-form {
+            >.MuiTypography-root {
+                font-size: 1rem;
+                font-weight: 500;
+                padding-bottom: 5px;
+            }
+
+            .MuiTextField-root {
+                width: 100%;
+                padding-bottom: 10px;
+            }
+
+            .MuiGrid-root {
+                >.MuiTypography-root {
+                    font-size: 1rem;
+                    font-weight: 500;
+                    padding-bottom: 5px;
+                }
+
+                .MuiTextField-root {
+                    padding-bottom: 0px;
+                }
+            }
+        }
+
+        &.information-list {
+            display: flex;
+            flex-direction: column;
+
+            >div {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                padding-bottom: 5px;
+
+                .MuiTextField-root {
+                    font-size: 1rem;
+                }
+
+                .MuiTypography-root:first-child {
+                    font-weight: 500;
+                    padding-right: 10px;
+                }
+            }
+
+            >div:last-child {
+                padding-bottom: 0px;
+            }
+        }
     }
 }
 
