Show continue button to step through form and display general error on submit

--- a/src/styles/components/_Modal.scss
+++ b/src/styles/components/_Modal.scss
@@ -98,6 +98,8 @@
     }
 
     .error-text {
+        display: flex;
+        flex-direction: column;
         font-family: 'Roboto' !important;
         font-size: 0.8rem;
         font-style: italic;
