--- a/src/styles/components/_Assessment.scss
+++ b/src/styles/components/_Assessment.scss
@@ -10,15 +10,16 @@
     }
 
     .assessment-content {
-        height: calc(100vh - 51px);
-        overflow-y: auto;
         display: flex;
         flex-direction: column;
         width: 100%;
     }
 
     .assessment-form {
-        margin: 15px;
+        padding: 15px;
+
+        height: calc(100vh - 101px);
+        overflow-y: auto;
     }
 
     .context {
