--- a/src/styles/components/_Changelog.scss
+++ b/src/styles/components/_Changelog.scss
@@ -4,15 +4,15 @@
     }
 
     .MuiTableContainer-root {
-        max-height: 400px;
         border-radius: 0px;
+        max-height: 400px;
+        overflow-y: auto;
 
         .MuiTableHead-root {
             .MuiTableCell-root {
-                background-color: palette(greyscale, 300);
-                color: palette(primary, main);
+                background-color: palette(greyscale, 300) !important;
+                color: palette(primary, main) !important;
             }
         }
     }
-
 }
