--- a/src/styles/components/_Table.scss
+++ b/src/styles/components/_Table.scss
@@ -2,13 +2,14 @@
     box-shadow: 0px 0px 0px 1px #ADADAD;
 
     .MuiTableHead-root {
-        background-color: #757575;
+        background-color: #757575 !important;
 
         th {
             border: none !important;
             padding: 8px 16px !important;
             line-height: 1.35;
-            color: white;
+            background-color: #757575 !important;
+            color: white !important;
             font-size: 0.8rem;
             font-family: 'Plus Jakarta Sans';
             font-weight: 600;
@@ -62,10 +63,11 @@
             }
 
             .MuiTableHead-root {
-                background-color: #E9E9E9;
+                background-color: #E9E9E9 !important;
 
                 th {
-                    color: #666666;
+                    background-color: #E9E9E9 !important;
+                    color: #666666 !important;
                     font-family: 'Plus Jakarta Sans';
                     font-weight: 600;
                     text-transform: uppercase;
