Pulled assessment create edit and view modal into separate page

--- a/src/styles/components/_Assessment.scss
+++ b/src/styles/components/_Assessment.scss
@@ -152,6 +152,11 @@
                 padding-bottom: 5px;
             }
 
+            .MuiFormControl-root {
+                width: 100%;
+                padding-bottom: 10px;
+            }
+
             .MuiTextField-root {
                 width: 100%;
                 padding-bottom: 10px;
@@ -162,6 +167,10 @@
                     font-size: 1rem;
                     font-weight: 500;
                     padding-bottom: 5px;
+                }
+
+                .MuiFormControl-root {
+                    padding-bottom: 0px;
                 }
 
                 .MuiTextField-root {
