--- a/src/styles/components/_Modal.scss
+++ b/src/styles/components/_Modal.scss
@@ -77,25 +77,7 @@
             border: 1px solid palette(greyscale, 400);
         }
 
-        .questions-bank {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding-top: 15px;
-
-            .MuiTypography-root {
-                padding: 10px;
-                cursor: pointer;
-            }
-
-            .active {
-                color: white;
-                font-weight: 600;
-                background-color: palette(primary, main);
-                border-radius: 3px;
-            }
-        }
+        
     }
 
     .MuiCardActions-root {
@@ -104,17 +86,7 @@
         padding-top: 15px;
     }
 
-    .error-text {
-        display: flex;
-        flex-direction: column;
-        font-family: 'Roboto' !important;
-        font-size: 0.8rem;
-        font-style: italic;
-        text-align: center;
-        color: palette(error, main);
-        width: 100%;
-        padding: 10px 0px 20px;
-    }
+    
 }
 
 
@@ -125,4 +97,39 @@
     width: 100%;
 
 
+}
+
+.questions-bank {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    &>div {
+        padding: 15px;
+    }
+
+    .MuiTypography-root {
+        padding: 10px;
+        cursor: pointer;
+    }
+
+    .active {
+        color: white;
+        font-weight: 600;
+        background-color: palette(primary, main);
+        border-radius: 3px;
+    }
+}
+
+.error-text {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Roboto' !important;
+    font-size: 0.8rem;
+    font-style: italic;
+    text-align: center;
+    color: palette(error, main);
+    width: 100%;
+    padding: 10px 0px 20px;
 }
