--- a/src/styles/components/_Assessment.scss
+++ b/src/styles/components/_Assessment.scss
@@ -62,6 +62,12 @@
         .MuiButton-root {
             margin-left: 10px;
         }
+
+        &>div {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
     }
 
     .question-content {
